# evy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  biome.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  run-e2e.sh  tsconfig.json  tslint.json
.github/workflows/: api_build.yml  api_lint.yml  api_tests.yml  e2e_tests.yml  lint.yml  pr_title.yml  push-ci-image.yml  push-docker-image.yml  push-docker-images.yml  types_check.yml  web_lint.yml  (+1 more)
admin/: .env.example  Dockerfile  README.md  next.config.js  nginx.conf  package.json  tsconfig.json
android/: README.md
api/: .env.example  .gitignore  Dockerfile  README.md  compose.yml  drizzle.config.ts  package.json  tsconfig.json
app-builder/: README.md  package.json
dev_tools/: .env  Dockerfile  README.md  docker-compose.dev.yml  generate_rust_models.sh
docs/: README.md  data.md  example.md  functions.md  sdui.md  types.md
ios/: README.md
prisma/: schema.prisma
scripts/: check-types.ts  generate-drizzle.ts  generate-swift-sdui.ts  generate-types.ts  normalize-sdui-docs.ts  postgres-init-marketplace.sql  seed.test.ts  seed.ts  types-generation-utils.ts
src/: configuration.rs  data.ts  db.ts  error.rs  index.ts  main.rs  service.rs  types.d.ts  ws.ts
tests/: data.spec.js
types/: rpcRequestHelpers.ts  validators.ts
web/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  biome.json  compose.yml  deno.json  fresh.gen.ts  next.config.mjs  package.json  playwright.config.js  playwright.e2e.config.js  tsconfig.json
(+608 files in other folders)
