[package]
name = "frodo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = { version = "4.3", features = ["macros"] }
actix-web-actors = "4.2"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb" }
thiserror = "1"
